--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/PluginStatus.d.ts",
   "scripts": {
     "clean": "rm -rf node_modules package-lock.json *.tgz",
-    "make": "npm install && tsc",
+    "make": "npm update && tsc",
     "pack": "npm pack"
   },
   "repository": {
